config/manifests/test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loopy
  labels:
    app: loopy
    vendor: salt-labs
    category: utilities
