config/manifests/test/BBB.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: test
spec:
  containers:
    - name: test
      image: busybox
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: test
          mountPath: /test
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 100m
          memory: 100Mi
  volumes:
    - name: test
      persistentVolumeClaim:
        claimName: test
