config/manifests/test/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: test
spec:
  containers:
    - name: debug
      image: busybox
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: debug
          mountPath: /mnt
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 100m
          memory: 100Mi
  volumes:
    - name: debug
      persistentVolumeClaim:
        claimName: debug
