config/manifests/test/lb.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: test-1
  namespace: test
  labels:
    app: http-echo
spec:
  containers:
    - name: test
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=Hello from Container 1"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 100m
          memory: 100Mi

---
kind: Pod
apiVersion: v1
metadata:
  name: test-2
  namespace: test
  labels:
    app: http-echo
spec:
  containers:
    - name: test
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=Hello from Container 2"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 100m
          memory: 100Mi

---
kind: Service
apiVersion: v1
metadata:
  name: test
  namespace: test
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
    - port: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test
  namespace: test
  annotations:
    kubernetes.io/tls-acme: "false"
    cert-manager.io/cluster-issuer: cert-authority
    cert-manager.io/duration: 1hr # Test renewal
    cert-manager.io/usages: "server auth"
    cert-manager.io/revision-history-limit: "1"
    cert-manager.io/private-key-algorithm: "Ed25519"
    cert-manager.io/private-key-encoding: "PCKS1"
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: "Never" # Test rotation (Never -> Always)
spec:
  ingressClassName: contour
  rules:
    - host: test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
